objects/amc__Meeting__c.object
<CustomObject>
    <description>The Meeting Object is used to record high level details for an individual Meeting within a Meeting Manager.</description>
    <fields>
        <fullName>amc__End_Time__c</fullName>
        <inlineHelpText>Identifies the end time of the meeting</inlineHelpText>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>amc__Event__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field if you wish to create a Salesforce Event related to this Meeting</inlineHelpText>
        <label>Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Location__c</fullName>
        <inlineHelpText>Identifies the location of the meeting</inlineHelpText>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Meeting_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Meeting Manager record this relates to</inlineHelpText>
        <label>Meeting Manager</label>
        <referenceTo>amc__Meeting_Manager__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Objective__c</fullName>
        <inlineHelpText>Identifies the high-level objectives of the meeting</inlineHelpText>
        <label>Objective</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amc__Start_Time__c</fullName>
        <inlineHelpText>Identifies the start time of the meeting</inlineHelpText>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>Meeting</label>
    <listViews>
        <fullName>amc__All</fullName>
        <columns>NAME</columns>
        <columns>amc__Objective__c</columns>
        <columns>amc__Location__c</columns>
        <columns>amc__Event__c</columns>
        <columns>amc__Start_Time__c</columns>
        <columns>amc__End_Time__c</columns>
        <columns>amc__Meeting_Manager__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>